
Changelog
=========

2019.1.0 (unreleased)
---------------------

- Bump ftw.pdfgenerator to version 1.6.3. [njohner]
- Fix an improper super call in meeting activities. [Rotonen]
- Move meeting activity actor_link fetching to meeting activity helpers. [Rotonen]
- Fix invalid end dates of resolved subdossiers when resolving main dossier. [njohner]
- Fix flaky loading of document preview with tooltip. [Kevin Bieri]
- Remove unused get_conversion_status view. [njohner]
- Remove plonetheme.teamraum upgradesteps. [phgross]
- Correctly update containing_dossier and containing_subdossier indexes. [njohner]
- Also show participants with expired membership in meeting participants-tab. [njohner]
- Change remaining "zurücksenden" to "ablegen". [njohner]
- Translate z3c.formwidget.query (nothing). [njohner]
- Add buttons for managers to get the toc json for meeting periods. [njohner]
- Add absent members to the meeting protocolData. [njohner]
- Add description field to paragraph add form. [njohner]
- Fix bug in disposition ech0160 folder model. [njohner]
- Port disposition tests to integration layer. [njohner]
- Add support for simple language codes in request language negotiation [lgraf]
- Fixed attaching mails to mail via Office Connector. [Rotonen]
- Fix typo in favorite error message. [njohner]
- Only display .docx files as possible proposal documents. [Rotonen]
- Render mail descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render mail descriptions as intelligent text on the mail overview. [Rotonen]
- Render document descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render document descriptions as intelligent text on the document overview. [Rotonen]
- Remove the now-unnecessary js files from the favorites template. [Rotonen]


2018.5.6 (2018-12-17)
---------------------

- Bump docxcompose to 1.0.0a15 for bugfixes. [deiferni]
- Set changed date on ObjectAdded instead of ObjectCreatedEvent. [phgross]